--- a/pages/mdx-page.mdx
+++ b/pages/mdx-page.mdx
@@ -1,1 +1,10 @@
-## H1
+import React from "react";
+
+export default function MdxPage() {
+  return (
+    <div>
+      <h1>This is an MDX page</h1>
+      <p>This is some text in MDX.</p>
+    </div>
+  );
+}
